# vibe-rust-template

./: CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  justfile
.github/: FUNDING.yml  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  chore.yml  ci_cd.yml  config.yml  documentation.yml  feature_request.yml  refactor.yml
.github/actions/build-rust/: action.yml
.github/workflows/: alpha-release.yml  build-artifacts.yml  copilot-setup-steps.yml  pr-asset-build.yml  release.yml  rust.yml
src/: main.rs
